Resolving font loading issue causing layout shift

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -32,23 +32,6 @@ body {
   /* border: 1px solid whitesmoke; */
 }
 
-h1 {
-  margin: 1rem 0;
-  font-size: 2.5rem;
-  font-family: var(--font-lato);
-  font-weight: 900;
-}
-
-h2 {
-  font-family: var(--font-lato);
-  font-weight: 700;
-}
-
-p {
-  font-family: var(--font-merriweather);
-  font-weight: 500;
-}
-
 /* section header */
 .section-header {
   display: flex;
